--- a/sql-spark.ipynb
+++ b/sql-spark.ipynb
@@ -60,7 +60,7 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://192.168.15.19:4040\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://192.168.15.19:4042\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
@@ -76,7 +76,7 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7f6bc83e0690>"
+       "<pyspark.sql.session.SparkSession at 0x7fe66ae37550>"
       ]
      },
      "execution_count": 4,
@@ -105,7 +105,7 @@
     {
      "data": {
       "text/plain": [
-       "<pyspark.sql.context.SQLContext at 0x7f6bc837b550>"
+       "<pyspark.sql.context.SQLContext at 0x7fe669dd1590>"
       ]
      },
      "execution_count": 6,
@@ -665,22 +665,22 @@
       "|    sedan| 52|volkswagen|\n",
       "|    sedan| 52|volkswagen|\n",
       "|    sedan| 55|    nissan|\n",
-      "|    sedan| 56|    toyota|\n",
       "|hatchback| 56|    toyota|\n",
+      "|    sedan| 56|    toyota|\n",
       "|hatchback| 58|     honda|\n",
       "|hatchback| 60|     honda|\n",
+      "|hatchback| 62|    toyota|\n",
       "|    wagon| 62|    toyota|\n",
       "|    wagon| 62|    toyota|\n",
       "|hatchback| 62|    toyota|\n",
       "|    wagon| 62|    toyota|\n",
       "|hatchback| 62|    toyota|\n",
-      "|hatchback| 62|    toyota|\n",
+      "|    sedan| 68|     mazda|\n",
+      "|hatchback| 68|     mazda|\n",
+      "|hatchback| 68|mitsubishi|\n",
       "|hatchback| 68|     dodge|\n",
       "|hatchback| 68|mitsubishi|\n",
       "|hatchback| 68|mitsubishi|\n",
-      "|    sedan| 68|     mazda|\n",
-      "|hatchback| 68|mitsubishi|\n",
-      "|hatchback| 68|  plymouth|\n",
       "+---------+---+----------+\n",
       "only showing top 20 rows\n",
       "\n"
@@ -776,10 +776,10 @@
       "|hatchback| 69|subaru|\n",
       "|hatchback| 73|subaru|\n",
       "|hatchback| 73|subaru|\n",
-      "|    sedan| 82|subaru|\n",
       "|    wagon| 82|subaru|\n",
       "|    sedan| 82|subaru|\n",
       "|    wagon| 82|subaru|\n",
+      "|    sedan| 82|subaru|\n",
       "|    sedan| 82|subaru|\n",
       "|    sedan| 94|subaru|\n",
       "|    wagon| 94|subaru|\n",
@@ -1046,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1055,7 +1055,7 @@
        "197"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1068,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1090,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1295,7 +1295,7 @@
        " Row(BODY=2.0, DOORS=1.0, HP=184.0, MPG=30.0, RPM=4500.0)]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1308,7 +1308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1351,7 +1351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1449,7 +1449,7 @@
        "4               103.0              6600.0  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1461,7 +1461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1473,7 +1473,7 @@
        " '55.78172588832487']"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1485,7 +1485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1497,7 +1497,7 @@
        " '13.182319291538608']"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1509,7 +1509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1519,7 +1519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1528,7 +1528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1549,7 +1549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1754,7 +1754,7 @@
        " DenseVector([-1.0656, -1.145, -2.726, -4.1557])]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1766,7 +1766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1796,7 +1796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1806,7 +1806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1851,7 +1851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1863,7 +1863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1878,7 +1878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1889,7 +1889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1974,7 +1974,7 @@
        "4  1 -1.065604 -1.144971 -2.725989 -4.155697"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1985,7 +1985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -2005,6 +2005,453 @@
     "plt.cla()\n",
     "plt.scatter(predPd[3], predPd[4], c = predPd[0])\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### JSON"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "json = spSession.read.json(\"data/funcionarios.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Row(deptid='1000', idade='42', nome='Gilmar Rezende', salario='5000', sexo='m'),\n",
+       " Row(deptid='2000', idade='50', nome='Matias Tavares', salario='8500', sexo='m'),\n",
+       " Row(deptid='1000', idade='36', nome='Paulo Miranda', salario='9700', sexo='m')]"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "json.take(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "json.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+-----+----------------+-------+----+\n",
+      "|deptid|idade|            nome|salario|sexo|\n",
+      "+------+-----+----------------+-------+----+\n",
+      "|  1000|   42|  Gilmar Rezende|   5000|   m|\n",
+      "|  2000|   50|  Matias Tavares|   8500|   m|\n",
+      "|  1000|   36|   Paulo Miranda|   9700|   m|\n",
+      "|  1000|   41|Ana Paula Soares|   9500|   f|\n",
+      "|  2000|   34|   Carolina Maia|   6500|   m|\n",
+      "+------+-----+----------------+-------+----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "json.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pyspark.sql.dataframe.DataFrame"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(json)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- deptid: string (nullable = true)\n",
+      " |-- idade: string (nullable = true)\n",
+      " |-- nome: string (nullable = true)\n",
+      " |-- salario: string (nullable = true)\n",
+      " |-- sexo: string (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "json.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------------+\n",
+      "|            nome|\n",
+      "+----------------+\n",
+      "|  Gilmar Rezende|\n",
+      "|  Matias Tavares|\n",
+      "|   Paulo Miranda|\n",
+      "|Ana Paula Soares|\n",
+      "|   Carolina Maia|\n",
+      "+----------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "json.select(\"nome\").show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+-----+--------------+-------+----+\n",
+      "|deptid|idade|          nome|salario|sexo|\n",
+      "+------+-----+--------------+-------+----+\n",
+      "|  2000|   50|Matias Tavares|   8500|   m|\n",
+      "+------+-----+--------------+-------+----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "json.filter(json[\"idade\"] == 50).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+-----+\n",
+      "|sexo|count|\n",
+      "+----+-----+\n",
+      "|   m|    4|\n",
+      "|   f|    1|\n",
+      "+----+-----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "json.groupBy(\"sexo\").count().show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+----------+-----------------+\n",
+      "|deptid|max(idade)|     avg(salario)|\n",
+      "+------+----------+-----------------+\n",
+      "|  2000|        50|           7500.0|\n",
+      "|  1000|        42|8066.666666666667|\n",
+      "+------+----------+-----------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "json.groupBy(\"deptid\").agg({\"salario\": \"avg\", \"idade\": \"max\"}).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# spark 1.X\n",
+    "json.registerTempTable(\"funcTB\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+-----+----------------+-------+----+\n",
+      "|deptid|idade|            nome|salario|sexo|\n",
+      "+------+-----+----------------+-------+----+\n",
+      "|  1000|   42|  Gilmar Rezende|   5000|   m|\n",
+      "|  2000|   50|  Matias Tavares|   8500|   m|\n",
+      "|  1000|   36|   Paulo Miranda|   9700|   m|\n",
+      "|  1000|   41|Ana Paula Soares|   9500|   f|\n",
+      "|  2000|   34|   Carolina Maia|   6500|   m|\n",
+      "+------+-----+----------------+-------+----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "spSession.sql(\"select * from funcTB\").show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# spark 2.x+\n",
+    "json.createTempView(\"funcTB2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+-----+----------------+-------+----+\n",
+      "|deptid|idade|            nome|salario|sexo|\n",
+      "+------+-----+----------------+-------+----+\n",
+      "|  1000|   42|  Gilmar Rezende|   5000|   m|\n",
+      "|  2000|   50|  Matias Tavares|   8500|   m|\n",
+      "|  1000|   36|   Paulo Miranda|   9700|   m|\n",
+      "|  1000|   41|Ana Paula Soares|   9500|   f|\n",
+      "|  2000|   34|   Carolina Maia|   6500|   m|\n",
+      "+------+-----+----------------+-------+----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "spSession.sql(\"select * from funcTB2\").show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Temp Tables\n",
+    "* Utilizado para SQL Ansi\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "json.createOrReplaceTempView(\"funcTB\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+-----+--------------+-------+----+\n",
+      "|deptid|idade|          nome|salario|sexo|\n",
+      "+------+-----+--------------+-------+----+\n",
+      "|  1000|   42|Gilmar Rezende|   5000|   m|\n",
+      "|  2000|   50|Matias Tavares|   8500|   m|\n",
+      "+------+-----+--------------+-------+----+\n",
+      "only showing top 2 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "spSession.sql(\"select * from funcTB\").show(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sqlContext.registerDataFrameAsTable(json, \"funcTB3\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+-----+--------------+-------+----+\n",
+      "|deptid|idade|          nome|salario|sexo|\n",
+      "+------+-----+--------------+-------+----+\n",
+      "|  1000|   42|Gilmar Rezende|   5000|   m|\n",
+      "|  2000|   50|Matias Tavares|   8500|   m|\n",
+      "+------+-----+--------------+-------+----+\n",
+      "only showing top 2 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "spSession.sql(\"select * from funcTB3\").show(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# referenciando o temp table a um objeto\n",
+    "funcTB3 = spSession.table(\"funcTB3\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pyspark.sql.dataframe.DataFrame"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(funcTB3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Row(deptid='1000', idade='42', nome='Gilmar Rezende', salario='5000', sexo='m')"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "funcTB3.filter(funcTB3[\"idade\"] == 42).first()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# comparando dataframe com table\n",
+    "sorted(funcTB3.collect()) == sorted(json.collect())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sqlContext.dropTempTable(\"funcTB3\")"
    ]
   }
  ],
