--- a/rdd-partition.ipynb
+++ b/rdd-partition.ipynb
@@ -137,6 +137,24 @@
    "source": [
     "collData.getNumPartitions()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "# parâmetro\n",
+    "print(sc.defaultParallelism)"
+   ]
   }
  ],
  "metadata": {
